--- a/fall-2025/fall-2025_slides/day5/day5-transformers.tex
+++ b/fall-2025/fall-2025_slides/day5/day5-transformers.tex
@@ -102,8 +102,8 @@
 
 
 \title[ML in PYthon]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 5 -- Friday \\ »Transformers«}
-\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ m.vanhoof@uva.nl, @marieke\_vh} \\}
-\date{September 20, 2024}
+\author[Rupert Kiddle, Sjoerd Stolwijk]{Rupert Kiddle \\ Sjoerd Stolwijk \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ s.b.stolwijk@uu.nl} \\}
+\date{September 18, 2025}
 \institute[Gesis]{Gesis}
 
 
