--- a/fall-2025/fall-2025_slides/day1/day1-morning.tex
+++ b/fall-2025/fall-2025_slides/day1/day1-morning.tex
@@ -99,8 +99,8 @@
 
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 1 - Monday  Morning\\ »Introduction«}
-\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl   \\m.vanhoof@uva.nl} \\}
-\date{September 16, 2024}
+\author[Rupert Kiddle, Sjoerd Stolwijk]{Rupert Kiddle \\ Sjoerd Stolwijk \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ s.b.stolwijk@uu.nl} \\}
+\date{September 15, 2025}
 \institute[Gesis]{Gesis}
 
 \begin{document}
@@ -127,7 +127,7 @@ minimum height=2em, text width=4em, text centered,]
 
 \begin{frame} 
 All course materials can be found at\ldots \\
-~~~~~~~~\url{https://github.com/annekroon/gesis-machine-learning/fall-2024}
+~~~~~~~~\url{https://github.com/annekroon/gesis-machine-learning/fall-2025}
 \end{frame}
 
 \section{Introducing\ldots}
@@ -158,14 +158,14 @@ Introducing\ldots \\
 \end{columns}
 \end{frame}
 
-\begin{frame}{Introducing\ldots} {\huge{Marieke}} \small{} 
+\begin{frame}{Introducing\ldots} {\huge{Sjoerd}} \small{} 
 \begin{columns}[] \column{.3\textwidth} \makebox[\columnwidth]{ \includegraphics[width=\columnwidth,height=\paperheight,keepaspectratio]{../pictures/Marieke_klein.jpg}} \column{.7\textwidth} Marieke van Hoof \\ 
-Postdoctoral researcher AI \& Politics (PhD PolCom, RM SocSci, BSc Sociology)
+Senior researcher Utrecht School of Governance (PhD PolCom, MA PolSci)\\
 \begin{itemize} 
-    \item Amsterdam School of Communication Research, University of Amsterdam
-	\item Research focused on the role of AI and algorithms in political information diets
-	\item Traditional methods (e.g., surveys, experiments) \& text analysis using automated approaches
-\end{itemize} @marieke\_vh \textbar m.vanhoof@uva.nl 
+    \item just finished postdoc on automatic debate quality metrics, University of Amsterdam
+	\item New project studies political decisionmaking under risk using in-person experiments
+	\item Interested in GLLM text annotation and biases, political decision biases
+\end{itemize} s.b.stolwijk@uu.nl 
 \end{columns} 
 \end{frame}
 
