--- a/fall-2025/fall-2025_slides/day2/day2-afternoon.tex
+++ b/fall-2025/fall-2025_slides/day2/day2-afternoon.tex
@@ -102,8 +102,8 @@
 
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 2 - Tuesday Afternoon \\ »From text to features: Advanced NLP and Regular Expression «}
-\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ m.vanhoof@uva.nl, @marieke\_vh} \\}
-\date{September 17, 2024}
+\author[Rupert Kiddle, Sjoerd Stolwijk]{Rupert Kiddle \\ Sjoerd Stolwijk \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ s.b.stolwijk@uu.nl} \\}
+\date{September 16, 2025}
 \institute[Gesis]{Gesis}
 
 
