--- a/fall-2025/fall-2025_slides/day2/day2-morning.tex
+++ b/fall-2025/fall-2025_slides/day2/day2-morning.tex
@@ -117,8 +117,8 @@
 
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 2 - Tuesday Morning \\ »From text to features: Natural Language Processing«}
-\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl \\m.vanhoof@uva.nl} \\}
-\date{September 16, 2024}
+\author[Rupert Kiddle, Sjoerd Stolwijk]{Rupert Kiddle \\ Sjoerd Stolwijk \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ s.b.stolwijk@uu.nl} \\}
+\date{September 16, 2025}
 \institute[Gesis]{Gesis}\part{\part{title}}
 
 
