--- a/fall-2025/fall-2025_slides/day3/day3-morning.tex
+++ b/fall-2025/fall-2025_slides/day3/day3-morning.tex
@@ -104,8 +104,8 @@
 \begin{document}
 
 \title[Big Data and Automated Content Analysis]{\textbf{A Practical Introduction to Machine Learning in Python} \\Day 3 - Wednesday \\ »Unsupervised Machine Learning«}
-\author[Rupert Kiddle, Marieke van Hoof]{Rupert Kiddle \\ Marieke van Hoof \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl \\m.vanhoof@uva.nl} \\}
-\date{September 16, 2024}
+\author[Rupert Kiddle, Sjoerd Stolwijk]{Rupert Kiddle \\ Sjoerd Stolwijk \\ ~ \\ \footnotesize{r.t.kiddle@vu.nl, @rptkiddle \\ s.b.stolwijk@uu.nl} \\}
+\date{September 17, 2025}
 \institute[Gesis]{Gesis}
 
 
