updated notebooks, added solutions, corrected typos, added pip install commands, updated versioning where needed, fixed some errors

--- a/fall-2025/fall-2025_exercises/day1/exercises-vectorizers/exercise-text-to-features.ipynb
+++ b/fall-2025/fall-2025_exercises/day1/exercises-vectorizers/exercise-text-to-features.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "### 3. Read some (or all?) data\n",
     "\n",
-    "Here is some example code that you can modify. Assuming that he folder `articles` is in the same folder as the notebook you are currently working on, you could, for instance, do the following to read a *part* of your dataset.\n",
+    "Here is some example code that you can modify. Assuming that the folder `articles` is in the same folder as the notebook you are currently working on, you could, for instance, do the following to read a *part* of your dataset.\n",
     "\n",
     "```python\n",
     "from glob import glob\n",
@@ -60,6 +60,23 @@
     "articles =random.sample(infowarsarticles, 10)\n",
     "```\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob\n",
+    "import os  \n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "data_dir = r\"C:/Data Management/Gesis IML/articles-small\" #adjust this to your data directory"
    ]
   },
   {
@@ -149,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
