--- a/fall-2025/fall-2025_exercises/day1/morning_livecode.ipynb
+++ b/fall-2025/fall-2025_exercises/day1/morning_livecode.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Alice and I am 30 years old.\n"
+     ]
+    }
+   ],
    "source": [
     "#define a person cass (sort of like a template)\n",
     "class Person:\n",
@@ -45,9 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [1, 2, 3, 4, 5]\n",
     "\n",
@@ -67,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n"
+     ]
+    }
+   ],
    "source": [
     "#define my__list of numbers: \n",
     "my_list = [1, 2, 3, 4, 5]\n",
@@ -83,9 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.0\n",
+      "35.0\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_mean_with_magic(numbers, magic_number):\n",
     "    \"\"\"\n",
@@ -257,7 +290,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Input string must contain only alphabetic characters and must not be empty",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Example usage\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(process_string(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m\"\u001b[39m))  \u001b[38;5;66;03m# Should print \"HELLO WORLD\"\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mprocess_string\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m123\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)  \u001b[38;5;66;03m# Should raise an AssertionError\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(process_string(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m))  \u001b[38;5;66;03m# Should raise an AssertionError\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[13], line 4\u001b[0m, in \u001b[0;36mprocess_string\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mprocess_string\u001b[39m(text):\n\u001b[0;32m      2\u001b[0m     \n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m# Ensure the input string contains only alphabetic characters and is not empty\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m text\u001b[38;5;241m.\u001b[39misalpha(), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput string must contain only alphabetic characters and must not be empty\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m# Convert the string to uppercase\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     result \u001b[38;5;241m=\u001b[39m text\u001b[38;5;241m.\u001b[39mupper()\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Input string must contain only alphabetic characters and must not be empty"
+     ]
+    }
+   ],
    "source": [
     "def process_string(text):\n",
     "    \n",
@@ -269,7 +322,8 @@
     "    return result\n",
     "\n",
     "# Example usage\n",
-    "print(process_string(\"hello world\"))  # Should print \"HELLO WORLD\"\n",
+    "print(process_string(\"hello\"))  # Should print \"HELLO\"\n",
+    "print(process_string(\"hello world\"))  # Should raise an AssertionError, because of space\n",
     "print(process_string(\"123\"))  # Should raise an AssertionError\n",
     "print(process_string(\"\"))  # Should raise an AssertionError"
    ]
@@ -298,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
