--- a/fall-2025/fall-2025_slides/day1/day1-morning.tex
+++ b/fall-2025/fall-2025_slides/day1/day1-morning.tex
@@ -412,7 +412,7 @@ for url in urls:
 \begin{block}{Low-level: Native python datatypes}
 	\begin{itemize}[<+->]
 		\item Booleans, integers, floats, strings, bytes, byte arrays
-		\item Lists, typles, sets, dictionaries
+		\item Lists, tuples, sets, dictionaries
 	\end{itemize}
 \end{block}
 \pause
