--- a/fall-2025/fall-2025_exercises/day1/example-vectorizer-to-dense.ipynb
+++ b/fall-2025/fall-2025_exercises/day1/example-vectorizer-to-dense.ipynb
@@ -13,8 +13,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
-    "\n",
+    "%pip install -U scikit-learn pandas\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "documents = ['the cat loved my sofa',\n",
     "             'the dog loved my chair',\n",
     "             'the bird loved my chair']\n",
@@ -55,9 +72,16 @@
     "\n",
     "vec = TfidfVectorizer() #or CountVectorizer()\n",
     "X = vec.fit_transform(documents)\n",
-    "print(pd.DataFrame(X.A, columns=vec.get_feature_names_out()).to_string())\n",
+    "print(pd.DataFrame(X.toarray(), columns=vec.get_feature_names_out()).round(2))\n",
     "df = pd.DataFrame(X.toarray().transpose(), index = vec.get_feature_names_out())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -76,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
