--- a/fall-2025/fall-2025_exercises/day2/exercises-morning/exercise-feature-engineering.ipynb
+++ b/fall-2025/fall-2025_exercises/day2/exercises-morning/exercise-feature-engineering.ipynb
@@ -19,7 +19,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from glob import glob\n",
+    "import os\n",
+    "import random\n",
+    "import regex as re\n",
+    "data_dir = r\"C:/Data Management/Gesis IML/articles-small\" #adjust this to your data directory"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,13 +41,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "infowarsfiles = glob('articles/*/Infowars/*')\n",
-    "infowarsarticles = []\n",
-    "for filename in infowarsfiles:\n",
-    "    with open(filename) as f:\n",
-    "        infowarsarticles.append(f.read())"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -150,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
