--- a/fall-2025/fall-2025_exercises/day5/exercise-afternoon/transformers_bert_classification.ipynb
+++ b/fall-2025/fall-2025_exercises/day5/exercise-afternoon/transformers_bert_classification.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -53,42 +53,7 @@
     "id": "BNxmMnzoccfm",
     "outputId": "6b4f884b-753b-49ad-a0f3-e13639473e68"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING: pip is being invoked by an old script wrapper. This will fail in a future version of pip.\n",
-      "Please see https://github.com/pypa/pip/issues/5599 for advice on fixing the underlying issue.\n",
-      "To avoid this problem you can invoke Python with '-m pip' instead of running pip directly.\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: transformers in ./.local/lib/python3.6/site-packages (4.18.0)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.1.0 in ./.local/lib/python3.6/site-packages (from transformers) (0.4.0)\n",
-      "Requirement already satisfied: filelock in /usr/local/lib/python3.6/dist-packages (from transformers) (3.4.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in ./.local/lib/python3.6/site-packages (from transformers) (1.19.5)\n",
-      "Requirement already satisfied: tqdm>=4.27 in ./.local/lib/python3.6/site-packages (from transformers) (4.64.0)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in ./.local/lib/python3.6/site-packages (from transformers) (2022.8.17)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,<0.13,>=0.11.1 in ./.local/lib/python3.6/site-packages (from transformers) (0.12.1)\n",
-      "Requirement already satisfied: sacremoses in ./.local/lib/python3.6/site-packages (from transformers) (0.0.53)\n",
-      "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from transformers) (2.27.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in ./.local/lib/python3.6/site-packages (from transformers) (6.0)\n",
-      "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.6/dist-packages (from transformers) (4.8.3)\n",
-      "Requirement already satisfied: dataclasses in /usr/local/lib/python3.6/dist-packages (from transformers) (0.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.6/dist-packages (from transformers) (21.3)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.6/dist-packages (from huggingface-hub<1.0,>=0.1.0->transformers) (4.1.1)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in ./.local/lib/python3.6/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
-      "Requirement already satisfied: importlib-resources in /usr/local/lib/python3.6/dist-packages (from tqdm>=4.27->transformers) (5.4.0)\n",
-      "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.6/dist-packages (from importlib-metadata->transformers) (3.6.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2022.5.18.1)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (3.3)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (1.26.9)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.6/dist-packages (from requests->transformers) (2.0.12)\n",
-      "Requirement already satisfied: joblib in ./.local/lib/python3.6/site-packages (from sacremoses->transformers) (1.0.1)\n",
-      "Requirement already satisfied: six in ./.local/lib/python3.6/site-packages (from sacremoses->transformers) (1.16.0)\n",
-      "Requirement already satisfied: click in /usr/lib/python3/dist-packages (from sacremoses->transformers) (6.7)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip3 install transformers"
    ]
@@ -104,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {
     "id": "x9Si6kIWcULv"
    },
@@ -2136,7 +2101,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "gesis_iml",
    "language": "python",
    "name": "python3"
   },
@@ -2150,12 +2115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "5b0d7544f82776c2b902af54887e7cde1aa7d2da4fd982551ffc3948bf7522f2"
-   }
+   "version": "3.10.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
